Added 2 more merchants on flash merchant page

--- a/flash-merchants.html
+++ b/flash-merchants.html
@@ -710,6 +710,34 @@
                     </a>
                   </div>
                 </div>
+                <div class="col-md-3 col-sm-3 bottommargin">
+                  <div class="partners">
+                    <a href="https://www.facebook.com/HH.ParadyzStoreBiz/" target="_blank">
+                      <div class="team-image">
+                        <img src="images/merchants/HH’Paradyz-Storebiz.jpg" alt="HH'Paradyz StoreBiz">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>HH'Paradyz StoreBiz</span>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-3 col-sm-3 bottommargin">
+                  <div class="partners">
+                    <a href="https://www.thisispdaworks.com/" target="_blank">
+                      <div class="team-image">
+                        <img src="images/merchants/PDAworks.jpg" alt="PDAworks">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>PDAworks</span>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
