Updated Roadmap secrton on homepage Removed 'son-tran' from Team page Removed 'social trades' from Merchants page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 		<link rel="stylesheet" href="css/swiper.min.css" integrity="text/css">
 		<link rel="stylesheet" href="css/roadmap_css.css" type="text/css" />
-		<link rel="stylesheet" href="css/achievement_style.css?ver=1.7" type="text/css" />
+		<link rel="stylesheet" href="css/achievement_style.css?ver=1.8" type="text/css" />
 		<!-- Document Title
 	============================================= -->
 		<title>Flashcoin | Home</title>
@@ -333,7 +333,7 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">January 2018</div>
-                            <div class="home-roadmap__title">New features addition and stability improvement. Multi cryptocurrencies support - BTC.</div>
+                            <div class="home-roadmap__title">New features addition and stability improvement.</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
@@ -349,7 +349,15 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">April 2018</div>
-                            <div class="home-roadmap__title">Multi cryptocurrencies support ETH, DASH, LTC</div>
+                            <div class="home-roadmap__title">Multi cryptocurrencies support - BTC, LTC</div>
+                        </div>
+                        <div class="home-roadmap__item swiper-slide">
+                            <div class="home-roadmap__points">
+                                <div class="home-roadmap__point"></div>
+                                <div class="home-roadmap__point _active"></div>
+                            </div>
+                            <div class="home-roadmap__date">May 2018</div>
+                            <div class="home-roadmap__title">Dash cryptocurrency support added in web wallet. BTC, LTC, Dash support added in Mobile Wallet</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
@@ -357,7 +365,7 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">June 2018</div>
-                            <div class="home-roadmap__title">Release of FLASH iOS Wallet.</div>
+                            <div class="home-roadmap__title">release of FLASH iOS Wallet.</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
@@ -365,7 +373,15 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">July 2018</div>
-                            <div class="home-roadmap__title">Support for integrated exchange. Testnet launch of decentralized FLASH.</div>
+                            <div class="home-roadmap__title">ETH cryptocurrency support added in Web and Mobile Wallet.</div>
+                        </div>
+                        <div class="home-roadmap__item swiper-slide">
+                            <div class="home-roadmap__points">
+                                <div class="home-roadmap__point"></div>
+                                <div class="home-roadmap__point _active"></div>
+                            </div>
+                            <div class="home-roadmap__date">August 2018</div>
+                            <div class="home-roadmap__title">FLASH blockchain upgrade to v0.13.3</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
@@ -373,7 +389,7 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">September 2018</div>
-                            <div class="home-roadmap__title">Addition of more cryptocurrencies - ERC20 tokens, NEO, etc. Launch of Human Teller Machine (HTM) on Mobile App.</div>
+                            <div class="home-roadmap__title">Support addedd for 66 ERC20 tokens in Webwallet.</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
@@ -381,7 +397,15 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">October 2018</div>
-                            <div class="home-roadmap__title">Introducing FLASH SWAPBOT. Mainnet launch of decentralized FLASH.</div>
+                            <div class="home-roadmap__title">Launch of Human Teller Machine in Mobile App. BCH support in Web Wallet.</div>
+                        </div>
+                        <div class="home-roadmap__item swiper-slide">
+                            <div class="home-roadmap__points">
+                                <div class="home-roadmap__point"></div>
+                                <div class="home-roadmap__point _active"></div>
+                            </div>
+                            <div class="home-roadmap__date">November 2018</div>
+                            <div class="home-roadmap__title">Trezor wallet support. Integrated Exchange support.</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
@@ -389,7 +413,7 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">December 2018</div>
-                            <div class="home-roadmap__title">Launch of FLASH Web Wallet 2.0. Launch of Human Teller Machine (HTM) on FLASH Web Wallet.</div>
+                            <div class="home-roadmap__title">Escrow support in HTM, HD Wallet support, testnet launch of decentralized FLASH and More.</div>
                         </div>
                     </div>
                     <div class="swiper-button-prev"></div>
@@ -452,6 +476,10 @@
 												<div class="col-md-6"><span>Release of FLASH iOS wallet</span></div>
 												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
 											</h5>
+											<h5 class="row">
+												<div class="col-md-6"><span>Multicurrency support in Mobile Wallet</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
+											</h5>
 										</div>
 									</div>
 								</div>
@@ -463,15 +491,19 @@
 										<div class="sub-section">
 											<h3 class="color-gold">FLASH Web Wallet</h3>
 											<h5 class="row">
-												<div class="col-md-6"><span>Import and Export of Private keys</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">70% Completed</span><span class="fill-in" data-width="70"></span></div>
+												<div class="col-md-6"><span>FLASH Sharing feature</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
+											</h5>
+											<h5 class="row">
+												<div class="col-md-6"><span>ERC20 tokens support</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
 											</h5>
 										</div>
 										<div class="sub-section">
 											<h3 class="color-gold">FLASH Blockchain & Apps</h3>
-											<h5 class="row">
-												<div class="col-md-6"><span>Testnet launch of Decentralized FLASH</span></div>
-												<div class="col-md-6 fill-in-block"><span class="fill-in-text">55% Completed</span><span class="fill-in" data-width="55"></span></div>
+											<h5 class="row q3-last-margin">
+												<div class="col-md-6"><span>FLASH blockchain upgrade to v0.13.3</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">100% Completed</span><span class="fill-in" data-width="100"></span></div>
 											</h5>
 										</div>
 									</div>
@@ -479,6 +511,106 @@
 								<div class="col-md-6 bottommargin-sm">
 									<div class="inner-section">
 										<h2>Quarter 4 2018</h2>
+										<div class="sub-section">
+											<h3 class="color-gold">FLASH Web Wallet</h3>
+											<h5 class="row">
+												<div class="col-md-6"><span>BCH wallet support</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">75% Completed</span><span class="fill-in" data-width="75"></span></div>
+											</h5>
+											<h5 class="row">
+												<div class="col-md-6"><span>Trezor wallet support</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">55% Completed</span><span class="fill-in" data-width="55"></span></div>
+											</h5>
+											<h5 class="row starting-soon clearfix collapse Quarter4" id="Quarter4-1">
+												<div class="col-md-6"><span>HD wallet support</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">15% Completed</span><span class="fill-in" data-width="15"></span></div>
+											</h5>
+											<h5 class="row starting-soon clearfix collapse Quarter4" id="Quarter4-1">
+												<div class="col-md-6"><span>Import and Export of private keys</span></div>
+												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											</h5>
+											<h5 class="row starting-soon clearfix collapse Quarter4" id="Quarter4-1">
+												<div class="col-md-6"><span>Multi Address support</span></div>
+												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											</h5>
+											<h5 class="row clearfix collapse Quarter4" id="Quarter4-1">
+												<div class="col-md-6"><span>Launch of FLASH Web Wallet 2.0</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">10% Completed</span><span class="fill-in" data-width="10"></span></div>
+											</h5>
+											<h5 class="row starting-soon clearfix collapse Quarter4" id="Quarter4-1">
+												<div class="col-md-6"><span>Support for Integrated Exchange</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">10% Completed</span><span class="fill-in" data-width="10"></span></div>
+											</h5>
+											<h5 class="row clearfix collapse Quarter4" id="Quarter4-1">
+												<div class="col-md-6"><span>Launch of FLASH Desktop Wallet for Mac, Windows, and Ubuntu</span></div>
+												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											</h5>
+										</div>
+										<div class="sub-section">
+											<h3 class="color-gold">FLASH Blockchain & Apps</h3>
+											<h5 class="row">
+												<div class="col-md-6"><span>Launch of HTM</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">95% Completed</span><span class="fill-in" data-width="95"></span></div>
+											</h5>
+											<h5 class="row clearfix collapse Quarter4">
+												<div class="col-md-6"><span>Testnet launch of Decentralized FLASH</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">20% Completed</span><span class="fill-in" data-width="20"></span></div>
+											</h5>
+											<h5 class="row starting-soon clearfix collapse Quarter4" id="Quarter4-2">
+												<div class="col-md-6"><span>Introducing Escrow in HTM</span></div>
+												<div class="col-md-6 fill-in-block"><span class="fill-in-text">10% Completed</span><span class="fill-in" data-width="10"></span></div>
+											</h5>
+											<h5 class="row starting-soon clearfix collapse Quarter4" id="Quarter4-2">
+												<div class="col-md-6"><span>Announcements of new upcoming features of FLASH Blockchains</span></div>
+												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											</h5>
+											<h5 class="text-right" style="margin:0"><a href="javascript:void(0)" onclick="javascript:expandAchievementSection(this)" class="color-gold" data-toggle="collapse" data-target=".Quarter4">More+</a></h5>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-12 bottommargin-sm">
+									<div class="inner-section">
+										<h2>Further ahead in 2019</h2>
+										<div class="sub-section">
+											<h3 class="starting-soon color-gold">FLASH Web Wallet</h3>
+											<h5 class="row starting-soon">
+												<div class="col-md-6"><span>Launch of Human Teller Machine (HTM) on FLASH Web Wallet</span></div>
+												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											</h5>
+											<h5 class="row starting-soon">
+												<div class="col-md-6"><span>Regional Exchanges partnerships to allow FIAT deposits and withdrawals</span></div>
+												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											</h5>
+											<h5 class="row starting-soon">
+												<div class="col-md-6"><span>Launch of Credit Card purchase</span></div>
+												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											</h5>
+											<h5 class="row starting-soon">
+												<div class="col-md-6"><span>Launch of Remittance</span></div>
+												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											</h5>
+										</div>
+										<div class="sub-section">
+											<h3 class="starting-soon color-gold">FLASH Blockchain & Apps</h3>
+											<h5 class="row starting-soon">
+												<div class="col-md-6"><span>Mainnet launch of decentralized FLASH</span></div>
+												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											</h5>
+											<h5 class="row starting-soon">
+												<div class="col-md-6"><span>Introducing FLASH SWAPBOT</span></div>
+												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											</h5>
+											<h5 class="row starting-soon">
+												<div class="col-md-6"><span>Launch of FLASH proprietary USB container for Cold storage</span></div>
+												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											</h5>
+											<h5 class="row starting-soon">
+												<div class="col-md-6"><span>Launch of Cold storage as service</span></div>
+												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
+											</h5>
+										</div>
 									</div>
 								</div>
 							</div>
