--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">September 2018</div>
-                            <div class="home-roadmap__title">Support addedd for 66 ERC20 tokens in Webwallet.</div>
+                            <div class="home-roadmap__title">Support addedd for 66 ERC20 tokens in Web Wallet.</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
