--- a/flash-merchants.html
+++ b/flash-merchants.html
@@ -700,7 +700,7 @@
                   <div class="partners">
                     <a href="https://www.facebook.com/HH.ParadyzStoreBiz/" target="_blank">
                       <div class="team-image">
-                        <img src="images/merchants/HH’Paradyz-Storebiz.jpg" alt="HH'Paradyz StoreBiz">
+                        <img src="images/merchants/HH-Paradyz-Storebiz.jpg" alt="HH'Paradyz StoreBiz">
                       </div>
                       <div class="team-desc">
                         <div class="partners-title">
