--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">September 2018</div>
-                            <div class="home-roadmap__title">Support addedd for 66 ERC20 tokens in Web Wallet.</div>
+                            <div class="home-roadmap__title">Support for ERC20 Tokens in FLASH web wallet.</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
@@ -405,7 +405,7 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">November 2018</div>
-                            <div class="home-roadmap__title">Trezor wallet support. Integrated Exchange support.</div>
+                            <div class="home-roadmap__title">Trezor wallet support. Escrow support in HTM.</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
@@ -413,7 +413,7 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">December 2018</div>
-                            <div class="home-roadmap__title">Escrow support in HTM, HD Wallet support, testnet launch of decentralized FLASH and More.</div>
+                            <div class="home-roadmap__title">Integrated Exchange support, HD Wallet support, testnet launch of decentralized FLASH and More.</div>
                         </div>
                     </div>
                     <div class="swiper-button-prev"></div>
