--- a/flash-snapshot.html
+++ b/flash-snapshot.html
@@ -79,11 +79,11 @@
 									<li><i class="icon-play"></i> If your blockchain was crashed and you need get it back to normal fast</li>
 								</ul>
 								<h2>Step 1: Download flashcoin_blockchain_snapshot file:</h2>
-								<a href="https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.30Jul2018.tar.gz" class="button button-3d bottommargin-sm">Download</a>
-								<p>(<a href="https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.30Jul2018.tar.gz" class="download-link">https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.30Jul2018.tar.gz</a>)<br>
-                          		(SHA1: 5c9086b6bdbcb517ede42d7b15e83d7fb118ddbe)<br>
-                          		(SHA256: 3b838d51fb1d5594aa85be16ac816bf54ce665c27a93a372533da353000b15d1)</p>
-								<p>The blockchain file has size 753Mb.</p>
+								<a href="https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.30Oct2018.tar.gz" class="button button-3d bottommargin-sm">Download</a>
+								<p>(<a href="https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.30Oct2018.tar.gz" class="download-link">https://flashcoin.io/downloads/flashcoin_blockchain_snapshot.30Oct2018.tar.gz</a>)<br>
+                          		(SHA256: d0ce0611bcb755157fab9267c26783a145dc96ec14eecb8b2a98d85470fa6eb2)<br>
+                          		(SHA512: b8daa5772ecc254878f89e17a2073f3ba09e4b884871dd8d5742e177133c4b9316e0495d8c38cf7be6255b5afb12209a012a1c0a97367492a1d3e12a6647dbc9)</p>
+								<p>The blockchain file has size 913Mb.</p>
 
 								<h2>Step 2: Unzip the flashcoin_blockchain_snapshot_*.tar.gz contain:</h2>
 								<p>The file contain:<br>
