Fixe - Roadmap achievement section issue. Added 2 new merchants on our-merchants page

--- a/flash-merchants.html
+++ b/flash-merchants.html
@@ -724,6 +724,34 @@
                     </a>
                   </div>
                 </div>
+                <div class="col-md-3 col-sm-3 bottommargin">
+                  <div class="partners">
+                    <a href="javascript: void(0)">
+                      <div class="team-image">
+                        <img src="images/merchants/EHbeautystore.png" alt="EHbeautystore">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>EHbeautystore</span>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-3 col-sm-3 bottommargin">
+                  <div class="partners">
+                    <a href="javascript: void(0)" target="_blank">
+                      <div class="team-image">
+                        <img src="images/merchants/dreamworld-studio.png" alt="Dreamworld Studio">
+                      </div>
+                      <div class="team-desc">
+                        <div class="partners-title">
+                          <span>Dreamworld Studio</span>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
