--- a/index.html
+++ b/index.html
@@ -513,32 +513,32 @@
 										<h2>Quarter 4 2018</h2>
 										<div class="sub-section">
 											<h3 class="color-gold">FLASH Web Wallet</h3>
-											
+
 											<h5 class="row">
 												<div class="col-md-6"><span>Trezor wallet support</span></div>
 												<div class="col-md-6 fill-in-block"><span class="fill-in-text">80% Completed</span><span class="fill-in" data-width="80"></span></div>
 											</h5>
-											<h5 class="row clearfix collapse Quarter4" id="Quarter4-1">
+											<h5 class="row clearfix collapse Quarter4">
 												<div class="col-md-6"><span>HD wallet support</span></div>
 												<div class="col-md-6 fill-in-block"><span class="fill-in-text">30% Completed</span><span class="fill-in" data-width="30"></span></div>
 											</h5>
-											<h5 class="row starting-soon clearfix collapse Quarter4" id="Quarter4-1">
+											<h5 class="row starting-soon clearfix collapse Quarter4">
 												<div class="col-md-6"><span>Import and Export of private keys</span></div>
 												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
 											</h5>
-											<h5 class="row starting-soon clearfix collapse Quarter4" id="Quarter4-1">
+											<h5 class="row starting-soon clearfix collapse Quarter4">
 												<div class="col-md-6"><span>Multi Address support</span></div>
 												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
 											</h5>
-											<h5 class="row clearfix collapse Quarter4" id="Quarter4-1">
+											<h5 class="row clearfix collapse Quarter4">
 												<div class="col-md-6"><span>Launch of FLASH Web Wallet 2.0</span></div>
 												<div class="col-md-6 fill-in-block"><span class="fill-in-text">10% Completed</span><span class="fill-in" data-width="10"></span></div>
 											</h5>
-											<h5 class="row starting-soon clearfix collapse Quarter4" id="Quarter4-1">
+											<h5 class="row starting-soon clearfix collapse Quarter4">
 												<div class="col-md-6"><span>Support for Integrated Exchange</span></div>
 												<div class="col-md-6 fill-in-block"><span class="fill-in-text">10% Completed</span><span class="fill-in" data-width="10"></span></div>
 											</h5>
-											<h5 class="row clearfix collapse Quarter4" id="Quarter4-1">
+											<h5 class="row clearfix collapse Quarter4">
 												<div class="col-md-6"><span>Launch of FLASH Desktop Wallet for Mac, Windows, and Ubuntu</span></div>
 												<div class="col-md-6"><span class="fill-in-text">starting soon</span></div>
 											</h5>
