snapshot updated minor other changes

--- a/index.html
+++ b/index.html
@@ -396,16 +396,8 @@
                                 <div class="home-roadmap__point"></div>
                                 <div class="home-roadmap__point _active"></div>
                             </div>
-                            <div class="home-roadmap__date">October 2018</div>
-                            <div class="home-roadmap__title">Launch of Human Teller Machine in Mobile App. BCH support in Web Wallet.</div>
-                        </div>
-                        <div class="home-roadmap__item swiper-slide">
-                            <div class="home-roadmap__points">
-                                <div class="home-roadmap__point"></div>
-                                <div class="home-roadmap__point _active"></div>
-                            </div>
                             <div class="home-roadmap__date">November 2018</div>
-                            <div class="home-roadmap__title">Trezor wallet support. Escrow support in HTM.</div>
+                            <div class="home-roadmap__title">Launch of Human Teller Machine in Mobile App. BCH support in Web Wallet. Trezor walleLaunch of Human Teller Machine in Mobile App. Escrow support in HTM.</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
