snapshot updated minor other changes

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">November 2018</div>
-                            <div class="home-roadmap__title">Launch of Human Teller Machine in Mobile App. BCH support in Web Wallet. Trezor walleLaunch of Human Teller Machine in Mobile App. Escrow support in HTM.</div>
+                            <div class="home-roadmap__title">Launch of Human Teller Machine in Mobile App. Trezor walleLaunch of Human Teller Machine in Mobile App. Escrow support in HTM.</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
