snapshot updated minor other changes

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 											<i class="icon-line2-bulb i-alt"></i>
 										</div>
 										<h3>No Unfair Advantage</h3>
-										<p>There is no developer slush fund, except the tiny amount of FLASH that was given to people who originally tested the platform. just a strong community behind FLASH.</p>
+										<p>There is no developer slush fund, except the tiny amount of FLASH that was given to people who originally tested the platform.</p>
 									</div>
 								</div>
 								<div class="col_one_third">
