--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">November 2018</div>
-                            <div class="home-roadmap__title">Launch of Human Teller Machine in Mobile App. Trezor walleLaunch of Human Teller Machine in Mobile App. Escrow support in HTM.</div>
+                            <div class="home-roadmap__title">Launch of Human Teller Machine in Mobile App. Trust based trade support in HTM.</div>
                         </div>
                         <div class="home-roadmap__item swiper-slide">
                             <div class="home-roadmap__points">
@@ -405,7 +405,7 @@
                                 <div class="home-roadmap__point _active"></div>
                             </div>
                             <div class="home-roadmap__date">December 2018</div>
-                            <div class="home-roadmap__title">Integrated Exchange support, HD Wallet support, testnet launch of decentralized FLASH and More.</div>
+                            <div class="home-roadmap__title">Trezor Wallet Support, Escrow support in HTM, HD Wallet support, testnet launch of decentralized FLASH and More.</div>
                         </div>
                     </div>
                     <div class="swiper-button-prev"></div>
