--- a/flash-merchants.html
+++ b/flash-merchants.html
@@ -728,7 +728,7 @@
                   <div class="partners">
                     <a href="javascript: void(0)">
                       <div class="team-image">
-                        <img src="images/merchants/EHbeautystore.png" alt="EHbeautystore">
+                        <img src="images/merchants/EHbeautystore.jpg" alt="EHbeautystore">
                       </div>
                       <div class="team-desc">
                         <div class="partners-title">
@@ -742,7 +742,7 @@
                   <div class="partners">
                     <a href="javascript: void(0)" target="_blank">
                       <div class="team-image">
-                        <img src="images/merchants/dreamworld-studio.png" alt="Dreamworld Studio">
+                        <img src="images/merchants/dreamworld-studio.jpg" alt="Dreamworld Studio">
                       </div>
                       <div class="team-desc">
                         <div class="partners-title">
