--- a/flash-merchants.html
+++ b/flash-merchants.html
@@ -726,7 +726,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3 bottommargin">
                   <div class="partners">
-                    <a href="javascript: void(0)">
+                    <a href="https://www.ehbeautystore.com/" target="_blank">
                       <div class="team-image">
                         <img src="images/merchants/EHbeautystore.jpg" alt="EHbeautystore">
                       </div>
