--- a/our-team.html
+++ b/our-team.html
@@ -222,15 +222,15 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="David Nguyen">
+											<img src="images/team/no-photo.jpg" alt="David Tz">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
-												<h4>David Nguyen</h4><span>Blockchain R&D</span></div>
+												<h4>David Tz</h4><span>Blockchain R&D</span></div>
 										</div>
 									</div>
 								</div>
-								<!-- David Nguyen end -->
+								<!-- David Tz end -->
 								<!--
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
