--- a/index.html
+++ b/index.html
@@ -644,16 +644,15 @@
 									<p>FLASH supports any legal cryptocurrency exchange, including decentralized exchanges. Our community occasionally contributes funds to get FLASH listed. FLASH is ideal for exchanges, as the transfer speeds and transaction costs are very low and
 										because it is based on LTC, integration. If you operate an exchange and are interested in listing FLASH, please contact <a href="mailto:support@flashcoin.io" target="_top">support@flashcoin.io</a> to receive a file with details on our source
 										code repo for exchanges and a legal opinion regarding FLASH’s status as a security token (it’s a community coin, not a security).</p>
-									<ul class="grid-4 clients-grid nobottommargin clearfix">
+									<ul class="grid-3 clients-grid nobottommargin clearfix">
 										<li><a href="https://www.cryptopia.co.nz/Exchange/?market=FLASH_BTC" target="_blank"><img src="images/exchanges/cryptopia.png" alt="Flash Cryptopia exchange"></a></li>
-										<li><a href="https://einstein.exchange/trade?mode=advanced&instrument=FLASHUSD" target="_blank"><img src="images/exchanges/einstein.jpg" alt="Flash Einstein exchange"></a></li>
 										<li><a href="https://www.coinhub.io/en/exchange" target="_blank"><img src="images/exchanges/coinhub.png" alt="Flash coinhub exchange"></a></li>
 										<li><a href="https://www.coinexchange.io/market/FLASH/BTC" target="_blank"><img src="images/exchanges/coinexchange.png" alt="Flash exchange"></a></li>
 										<li><a href="https://indacoin.com/en_GB/change/buy-flash-with-cardusd" target="_blank"><img src="images/exchanges/indacoin.png" alt="Flash exchange"></a></li>
 										<li><a href="https://wallet.crypto-bridge.org/market/BRIDGE.FLASH_BRIDGE.BTC" target="_blank"><img src="images/exchanges/crypto-bridge.png" alt="Flash Coin exchange"></a></li>
 										<li><a href="https://cryptowolf.eu/exchange/" target="_blank"><img src="images/exchanges/cryptowolf.png" alt="Flash exchange"></a></li>
 										<li><a href="https://crex24.com/exchange/FLASH-BTC" target="_blank"><img src="images/exchanges/crex24.png" alt="Flash exchange"></a></li>
-										<li class= "exchanges-border"><a href="https://upcoin.com/trade/FLASH-BTC" target="_blank"><img src="images/exchanges/upcoin.png" alt="Flash exchange"></a></li>
+										<li><a href="https://upcoin.com/trade/FLASH-BTC" target="_blank"><img src="images/exchanges/upcoin.png" alt="Flash exchange"></a></li>
 										<li class= "exchanges-border"><a href="https://www.boaexchange.com/market/FLASH_BTC" target="_blank"><img src="images/exchanges/boa_exchange.png" alt="Flash exchange"></a></li>
 									</ul>
 								</div>
