--- a/header.html
+++ b/header.html
@@ -45,7 +45,7 @@
 											</a>
 										</li> -->
 										<li>
-											<a href="#" data-href="#team">
+											<a href="our-team.html">
 												<div>TEAM</div>
 											</a>
 										</li>
