--- a/our-team.html
+++ b/our-team.html
@@ -64,10 +64,88 @@
 				============================================= -->
 					<div id="team" class="page-section topmargin-lg">
 
+						<!--Advisors-->
+						<div class="fancy-title title-border title-center">
+							<h1><span>Advisors</span></h1>
+						</div>
+
+						<div class="container clearfix">
+
+							<div class="row topmargin-lg divcenter" style="max-width: 1000px;">
+
+								<div class="col-md-4 bottommargin team-advisors">
+									<div class="team">
+										<div class="team-image">
+											<img src="images/team/chris-kitze.jpg" alt="Chris Kitze">
+										</div>
+										<div class="team-desc team-desc-bg">
+											<div class="team-title">
+												<h4>Chris Kitze</h4><span>Advisor | <a href="https://www.linkedin.com/in/chriskitze/" target="_blank"><i class="fab fa-linkedin" style="font-size: 18px !important;"></i></a></span></div>
+										</div>
+									</div>
+								</div>
+								<!--chris kitze end-->
+
+								<div class="col-md-4 bottommargin team-advisors">
+									<div class="team">
+										<div class="team-image">
+											<img src="images/team/vinh-vo.jpg" alt="Vinh Vo">
+										</div>
+										<div class="team-desc team-desc-bg">
+											<div class="team-title">
+												<h4>Vinh Vo</h4><span>Advisor | <a href="https://www.linkedin.com/in/flashiovinh/" target="_blank"><i class="fab fa-linkedin" style="font-size: 18px !important;"></i></a></span></div>
+										</div>
+									</div>
+								</div>
+								<!-- vinh vo end -->
+
+								<div class="col-md-4 bottommargin team-advisors">
+									<div class="team">
+										<div class="team-image">
+											<img src="images/team/james-jr.jpg?12" alt="James Jr.">
+										</div>
+										<div class="team-desc team-desc-bg">
+											<div class="team-title">
+												<h4>James Jr.</h4><span>Advisor</span></div>
+										</div>
+									</div>
+								</div>
+								<!--James Jr. end-->
+
+								<div class="col-md-4 bottommargin team-advisors">
+									<div class="team">
+										<div class="team-image">
+											<img src="images/team/jim-blasko.jpg" alt="Jim Blasko">
+										</div>
+										<div class="team-desc team-desc-bg">
+											<div class="team-title">
+												<h4>Jim Blasko</h4><span>Advisor</span></div>
+										</div>
+									</div>
+								</div>
+								<!--Jim Blasko end-->
+
+								<div class="col-md-4 bottommargin team-advisors">
+									<div class="team">
+										<div class="team-image">
+											<img src="images/team/codeislaw.jpg?1" alt="Codeislaw">
+										</div>
+										<div class="team-desc team-desc-bg">
+											<div class="team-title">
+												<h4>Codeislaw</h4><span>Advisor</span></div>
+										</div>
+									</div>
+								</div>
+								<!-- Codeislaw end -->
+
+							</div>
+						</div>
+						<!--Advisors end-->
+
 						<!--Core Team-->
 						<div class="heading-block center">
 							<div class="fancy-title title-border title-center">
-								<h1><span>Core Team</span></h1>
+								<h1><span>Development Team</span></h1>
 							</div>
 						</div>
 
@@ -76,18 +154,6 @@
 
 							<div class="row topmargin-lg divcenter" style="max-width: 1000px;">
 
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/chris-kitze.jpg" alt="Chris Kitze">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Chris Kitze</h4><span>Co-Creator | <a href="https://www.linkedin.com/in/chriskitze/" target="_blank"><i class="fab fa-linkedin" style="font-size: 18px !important;"></i></a></span></div>
-										</div>
-									</div>
-								</div>
-								<!--chris kitze end-->
 								<!--
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
@@ -102,19 +168,6 @@
 								</div>
 								-->
 								<!--jason king end-->
-
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/vinh-vo.jpg" alt="Vinh Vo">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Vinh Vo</h4><span>Co-Creator | <a href="https://www.linkedin.com/in/flashiovinh/" target="_blank"><i class="fab fa-linkedin" style="font-size: 18px !important;"></i></a></span></div>
-										</div>
-									</div>
-								</div>
-								<!-- vinh vo end -->
 
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
@@ -364,58 +417,6 @@
 							</div>
 						</div>
 						<!--Community Volunteers end-->
-
-						<!--Advisors-->
-						<div class="fancy-title title-border title-center">
-							<h1><span>Advisors</span></h1>
-						</div>
-
-						<div class="container clearfix">
-
-							<div class="row topmargin-lg divcenter" style="max-width: 1000px;">
-
-								<div class="col-md-4 bottommargin team-advisors">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/jim-blasko.jpg" alt="Jim Blasko">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Jim Blasko</h4><span>Advisor</span></div>
-										</div>
-									</div>
-								</div>
-								<!--Jim Blasko end-->
-
-								<div class="col-md-4 bottommargin team-advisors">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/james-jr.jpg?12" alt="James Jr.">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>James Jr.</h4><span>Advisor</span></div>
-										</div>
-									</div>
-								</div>
-								<!--James Jr. end-->
-
-								<div class="col-md-4 bottommargin team-advisors">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/codeislaw.jpg?1" alt="Codeislaw">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Codeislaw</h4><span>Advisor</span></div>
-										</div>
-									</div>
-								</div>
-								<!-- Codeislaw end -->
-
-							</div>
-						</div>
-						<!--Advisors end-->
 
 					</div>
 					<!-- #section-team end -->
