--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<!-- <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" /> -->
 		<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 		<!-- <link rel="stylesheet" href="css/et-line.css" type="text/css" /> -->
-		<link rel="stylesheet" href="css/04.custom.css?ver=2.5" type="text/css" />
+		<link rel="stylesheet" href="css/04.custom.css?ver=2.6" type="text/css" />
 		<link rel="stylesheet" href="css/responsive.css" type="text/css" />
 		<link rel="stylesheet" href="css/swiper.min.css" integrity="text/css">
 		<link rel="stylesheet" href="css/roadmap_css.css" type="text/css" />
@@ -267,11 +267,12 @@
 					<div id="team" class="page-section topmargin-lg">
 						<div class="heading-block center">
 							<div class="fancy-title title-border title-center">
-								<h1><span>Core Team</span></h1>
+								<h1><span>FLASH Team</span></h1>
 							</div>
 						</div>
 						<div class="container clearfix">
 							<div class="row topmargin-lg justify-content-md-center">
+								<!--
 								<div class="col-md-3 col-sm-6">
 									<div class="team">
 										<div class="team-image">
@@ -283,6 +284,7 @@
 										</div>
 									</div>
 								</div>
+								-->
 								<!--
 								<div class="col-md-4 col-sm-4">
 									<div class="team">
@@ -296,6 +298,7 @@
 									</div>
 								</div>
 								-->
+								<!--
 								<div class="col-md-3 col-sm-6">
 									<div class="team">
 										<div class="team-image">
@@ -307,9 +310,10 @@
 										</div>
 									</div>
 								</div>
+								-->
 								<div class="col-md-12">
 									<div class="promo promo-center">
-										<a href="our-team.html"><img src="images/_newsite/web_img/img-MoreButton.png?ver=1.1" onmouseover="hover(this);" onmouseout="unhover(this);" data-imgname="img-MoreButton" style="width:130px;"></a>
+										<a href="our-team.html" class="flash_button_style">MEET OUR TEAM</a>
 									</div>
 								</div>
 							</div>
