fixed delayed loading

--- a/header.html
+++ b/header.html
@@ -207,3 +207,10 @@
 						</nav>
 						<!-- #primary-menu end -->
 </div>
+<!-- External JavaScripts
+			============================================= -->
+			<script defer src="js/fontawesome5.0.8.all.js"></script>
+
+			<!-- Footer Scripts
+	============================================= -->
+			<script src="js/functions.js"></script>
