removed bitcoin talk links

--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
 									<li><a href="https://www.youtube.com/channel/UCMOYSMroaTrgCNslbaQ6Urw" target="_blank"><i class="fab fa-youtube"></i><span>YouTube</span></a></li>
 									<li><a href="https://plus.google.com/u/0/b/110236490072104998071/110236490072104998071" target="_blank"><i class="fab fa-google-plus"></i><span>Google+</span></a></li>
 									<li><a href="https://github.com/flash-coin" target="_blank"><i class="fab fa-github"></i><span>Github</span></a></li>
-									<li><a href="https://bitcointalk.org/index.php?topic=1605453.0" target="_blank"><i class="fab fa-bitcoin"></i><span>BitcoinTalk</span></a></li>
+									<!--<li><a href="https://bitcointalk.org/index.php?topic=1605453.0" target="_blank"><i class="fab fa-bitcoin"></i><span>BitcoinTalk</span></a></li>-->
 									<li><a href="https://www.reddit.com/r/FlashCoins/" target="_blank"><i class="fab fa-reddit"></i><span>Reddit</span></a></li>
 									<li><a href="https://steemit.com/@flash.coin" target="_blank"><i class="fas fa-comments"></i><span>SteemIt</span></a></li>
 									<li><a href="https://blog.flashcoin.io/" target="_blank"><i class="fa fa-rss-square"></i><span>Blog</span></a></li>
