--- a/footer.html
+++ b/footer.html
@@ -153,6 +153,14 @@
 			<div id="gotoTop" class="" style="background-color:transparent !important"><img src="images/_newsite/web_img/UpButton.png"></div>
 			<!-- #wrapper end -->
 
+			<!-- External JavaScripts
+			============================================= -->
+			<script defer src="js/fontawesome5.0.8.all.js"></script>
+
+			<!-- Footer Scripts
+	============================================= -->
+			<script src="js/functions.js?2.0"></script>
+
 <script>
 				jQuery(document).ready(function() {
 
