--- a/web-wallet-guide.html
+++ b/web-wallet-guide.html
@@ -44,8 +44,19 @@
 	<script src="js/jquery.js"></script>
 	<script>
 		$(function() {
-				$('#header-wrap').load('header.html');
-				$('#footer-comman').load('footer.html');
+			var headerLoaded = false, footerLoaded = false;
+            $('#header-wrap').load('header.html', function() {
+                headerLoaded = true;
+                if(headerLoaded && footerLoaded) {
+                    documentOnReadyInitiaize();
+                }
+            });
+            $('#footer-comman').load('footer.html', function() {
+                footerLoaded = true;
+                if(headerLoaded && footerLoaded) {
+                    documentOnReadyInitiaize();
+                }
+            });
 		});
 		</script>
 
