--- a/faq.html
+++ b/faq.html
@@ -222,7 +222,7 @@
 										<h3>Who Are The Developers Behind FLASH?</h3>
 									</div>
 									<div class="faqs-desc-bg">
-										<h4 class="">The FLASH development team is lead by Mr. Deepak Kumar. All other developers are listed on the FLASH website <a target="_blank" href="https://www.flashcoin.io/our-team.html">team page</a>.</h4>
+										<h4 class="">The FLASH development team is lead by Deepak Kumar. All other developers are listed on the FLASH website <a target="_blank" href="https://www.flashcoin.io/our-team.html">team page</a>.</h4>
 									</div>
 								</div>
 								<div class="faqs-section">
